app/assets/stylesheets/core.css.scss
// Place all the styles related to the home controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/

body, html {
	height: 100%;
	font-size: 10px;
	background: #ffffff;
	color: #333;
	z-index: 0;
	overflow: scroll;
    -webkit-overflow-scrolling: touch;
}	

a {
	cursor: pointer;
}

#container {
	@extend .clearfix;
	min-height: 100%;
	max-width: 910px;
	margin: 0 auto 10rem auto;
}

#logo {
	float: left;
	margin: 3.5rem 0 1.5rem 0;
	height: 100px;
	position: relative;
	
	.logo-shape {
		width: 100px;
		height: 100px;
		position: absolute;
		top: 0;
		left: 0;
		background: $purpose-background;
		border: 1px solid $purpose-border;
	}
	
	a {
		display: block;
		position: absolute;
		left:0;
		top:0;
		width: 100px;
		height: 100px;
		
		&.blog {
			border-radius: 50px;
		
			&:before {
				content: "";
				position: absolute;
				top: 0;
				bottom: 0;
				left: 0;
				right: 0;
				border-radius: 50px;
				z-index: 100;
				box-shadow: inset 0 0 2px 1px rgba(0,0,0,0.2);
			} 
		}
	}
	
	img.name {
		width: 125px;
		position: absolute;
		top: 25px;
		left: -12px;

		&.variable {
			opacity: 0;
			transition: opacity .5s;
		}
	}
	
	&:hover img.name.variable {
		opacity: 1;
	}
	
	img, canvas {		
		&.blog {
			width: 100px;
			height: 100px;
			position: absolute;
			top: 0px;
			left: 0;
			border-radius: 50px;
		}
	}
	
}

#video {
	display: block;
	width: 100%;
}

article#main {
	clear: both;
	width: 67%;
	float: left;
}
 
aside#sidebar {
	width: 27%;
	float: right;
	padding-top: 2.5rem;
	
	img, h3, p {
		margin: 0;
		padding: 0;
	}
	
	img.portrait {
		width: 6.4rem;
		height: 6.4rem;
		margin-bottom: 3rem;
	}
	
	h3 {
		@include font(karla);
		font-weight: 700;
		font-size: 1.3rem;
		line-height: 2.15;
		color: $header_color;
	}
	
	p {
		@include font(karla);
		font-size: 1.5rem;
		line-height: 1.86;
		color: $sidebar_text_color;
		margin-bottom: 3.5rem;
		
		a {
			color: $sidebar_link_color;
			display: inline-block;
			text-decoration: none;
			background-image: linear-gradient(to bottom, rgba(0,0,0,0) 75%, $sidebar_link_color 75%);
			background-repeat: repeat-x;
			background-size: 2px 2px;
			background-position: 0 19px;
			white-space: pre;
			
			&:hover {
				color: $highlight_text_color;
				background-image: linear-gradient(to bottom, rgba(0,0,0,0) 75%, $highlight_text_color 75%);
			}
			
			&:after {
				content: '\A';
			}
		}
	}
}

article {
	h1, h2, h3 {
		@include font(karla);
		font-weight: 400;
		line-height: 1.21;
		color: $header_color;
		
		strong {
			font-weight: 700;
		}
	}
	
	h1 {
		font-size: 3.2rem;
	}
	
	h2 {
		font-size: 2rem;
	}
	
	h3 {
		font-size: 1.3rem;
		font-weight: bold;
	}
	
	p, blockquote, li {
		@include font(ff-meta-serif);
		font-size: 1.8rem;
		line-height: 1.82;
		color: $body_text_color;
		margin: 1.7rem 0;
		
		&.headless {
			margin-top: 1em;
		}
		
		a {
			text-decoration: none;
			color: $body_text_color;
			background-image: linear-gradient(to bottom, rgba(0,0,0,0) 75%, $body_text_color 75%);
			background-repeat: repeat-x;
			background-size: 2px 2px;
			background-position: 0 19px;
		
			&:hover {
				color: $body_link_hover_color;
				background-image: linear-gradient(to bottom, rgba(0,0,0,0) 75%, $body_link_hover_color 75%);
			}
		}
	}	
	
	blockquote {
		color: $blockquote_text_color;
		font-style: italic;
		margin: 2.5rem 4rem 3rem 2.5rem;
		quotes: "\201C""\201D""\2018""\2019";
	}
	
	ul {
		margin-bottom: 1.7rem;
		padding-left: 1.5rem;
		
		li {
			margin: .8rem;
		}
	}
	
	
	pre {
		font-family: Consolas, monospace;
		background: #222;
		padding: 1em 3%;
		line-height: 1.6;
		width: 100%;
		margin-left: -3%;
		color: #f4e8e7;
		font-size: 1.8rem;
		display: block;
		width: auto;
		white-space: pre-wrap;       /* css-3 */
		white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
		white-space: -pre-wrap;      /* Opera 4-6 */
		white-space: -o-pre-wrap;    /* Opera 7 */
		word-wrap: break-word;       /* Internet Explorer 5.5+ */
	}
	
	blockquote:before {
	  color: #ccc;
	  content: open-quote;
	  font-size: 3em;
	  line-height: 0.1em;
	  margin-right: 0.25em;
	  vertical-align: -0.4em;
	}

	section.body, section.signoff {
		h2 {
			margin-top: 1.5em;
			margin-bottom: .5em;
		}
		p {
			margin-top: 0;
			margin-bottom: 1.6rem;
		}
	}
}

section.purpose {
	border: 1px solid $purpose_border;
	background: $purpose_background;
	padding: 0 3%;
	width: 100%;
	margin-left: -3%;
	
	h2 {
		margin-bottom: 1rem;
	}
	
	p {
		margin-top: 0;
	}
}

section.body, section.signoff {
	dl {
		font-size: 1.4rem;
		color: #666;
		margin: 2em 0 3em 0;
		
		dt {
			@include font(karla);
			color: $header-color;
			font-weight: bold;
			font-size: 1.3rem;
			text-transform: uppercase;
			letter-spacing: 0.2em;
			margin-bottom: .75em;
		}
		
		dd {
			@include font(ff-meta-serif); 
			text-indent: -1em;
			transition: padding 0.5s;
			margin: .5em 1em;
		
			&:before {
			  content: "\2014";
			  padding-right: 5px;
			}
		
			&:hover {
				padding-left: .5em;
			}
		
		}
		
		a {
			text-decoration: none;
			color: #666;
			margin-top: .5rem;
			
			&:hover {
				color: #999;
			}
			
			span {
				font-size: .8em;
				margin-left: .5em;
				color: $secondary_text_color;
			}
		}
	}
}

.divider {
	background: #E8E8E8;
	height: 3px;
	width: 43px;
	margin: 3rem 0;
}

.blog-list-container {
	padding: 0;
	margin:0 auto;
	
	p {
		color: $highlight_text_color;
		font-style: italic;
	}
}

.blog-list {
	@extend .clearfix;
	list-style-type: none;
	padding: 0 !important;
	width: 100%;
	padding: 1.5rem;
	margin: 0 auto;
	font-size: 1rem;
	
	tr {
		@extend .clearfix;
		clear: both;
		border-bottom: 1px solid #F5F5F5;
		
		td {
  			padding: 0;
		}
	}
		
	h3, span.date {
		@include font('ff-meta-serif');
		font-size: 1.8rem;
		font-weight: 400;
		line-height: 1;
		margin: 1.25em 0 1em 0;
	}
	
	h3 {
		float: left;
		
		a {
			color: $header_color;
			display: block;
			text-decoration: none;
			
			&:hover {
				background-image: linear-gradient(to bottom, rgba(0,0,0,0) 75%, $header_color 75%);
				background-repeat: repeat-x;
				background-size: 2px 2px;
				background-position: 0 14px;
			}
		}
	}
	
	span.date {
		float: right;
		color: $secondary-text-color;
	}
}

header, footer {
	clear: both;
	font-family: "ff-meta-serif-web-pro-1","ff-meta-serif-web-pro-2";
	background: rgb(59, 0, 71);
	background: -moz-linear-gradient(20deg, rgb(59, 0, 71) 30%, rgb(112, 201, 233) 100%);
	background: -webkit-linear-gradient(20deg, rgb(59, 0, 71) 30%, rgb(112, 201, 233) 100%);
	background: -o-linear-gradient(20deg, rgb(59, 0, 71) 30%, rgb(112, 201, 233) 100%);
	background: -ms-linear-gradient(20deg, rgb(59, 0, 71) 30%, rgb(112, 201, 233) 100%);
	background: linear-gradient(110deg, rgb(59, 0, 71) 30%, rgb(112, 201, 233) 100%);
	height: 1rem;
}

// 992px & Under
@media only screen and (max-width: 992px) {
	#container {
		max-width: 90%;
	}
}

// 800px & Under
@media only screen and (max-width: 800px) {
	body, html {
		font-size: 9px;
	}
	
	.blog-list {
		
		h3 {
			margin-bottom: 0;
		}
		
		span.date {
			margin-top: .5rem;
			clear: both;
			float: left;
			font-size: 1.6rem;
		}
	}
}

// 600px & Under
@media only screen and (max-width: 640px) {
	body, html {
		overflow-x: hidden;
	}
	
	article#main {
		width: 100%;
	}
	
	section.purpose {
		border-left: none;
		border-right: none;
		padding: 0 6%;
		margin-left: -6%;
	}
 
	aside#sidebar {
		float: left;
		max-width: 400px;
		width: 100%;
		padding-top: 10rem;
	}
	
	#logo {
		img.name.variable {
			opacity: 1;
		}
	}
}

